# bulma-turbo-themes

./: .actrc  .codecov.yml  .darglint  .editorconfig  .gitattributes  .gitignore  .lintro-config.yaml  .lintro-ignore  .markdownlint-cli2.jsonc  .markdownlint.jsonc  .markdownlintignore  .prettierignore  .releaserc.json  .semgrepignore  .shellcheckrc  .stylelintignore  .stylelintrc.json  .yamllint  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  GOVERNANCE.md  Gemfile  MAINTAINERS.md  Makefile  README.md  Rakefile  SECURITY.md  VISION.md  _config.prod.yml  _config.production.yml  _config.yml  biome.json  build.sh  bulma-turbo-themes.gemspec  bunfig.toml  components.md  eslint.config.js  forms.md  (+17 more)
.allstar/: README.md  allstar.yaml  binary_artifacts.yaml  branch_protection.yaml  outside.yaml  security.yaml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  labeler.yml  versions.env
.husky/: pre-commit
_data/: i18n.yml
_es/: introduccion.md
_layouts/: default.html
_plugins/: simplify_urls.rb
benchmarks/: css-generation.bench.ts  theme-switching.bench.ts
config/: reports.json  style-dictionary.config.js  style-dictionary.swift.js  token-mappings.json  token-mappings.schema.json
docs/: ACT-SETUP.md  ADVANCED-THEMING.md  CI-REQUIREMENTS.md  E2E-TESTING.md  LOCAL-CI-SETUP.md  LOCAL-TEST-REPORTING.md  PLAYWRIGHT-VISUAL-TESTS.md  RELEASE-TRAIN.md  SUPPRESSIONS.md  THEME-SELECTOR-DESIGN.md
e2e/: accessibility.spec.ts  fixtures.ts  helpers.ts  homepage-theme.spec.ts  mobile-viewport.spec.ts  nav-smoke.spec.ts  performance.spec.ts  playground-visual.spec.ts  reports-links.spec.ts  stackblitz.spec.ts  theme-edge-cases.spec.ts  user-journeys.spec.ts  visual-regression.spec.ts
examples/: README.md  playwright.config.ts
lib/: bulma-turbo-themes.rb
python/: README.md  pyproject.toml
python/src/turbo_themes/: __init__.py  css_variables.py  manager.py  mapping_config.py  themes.py  tokens.json  tokens.py
python/tests/: test_manager.py  test_tokens.py
schema/: turbo-themes-output.schema.json  turbo-themes.schema.json
scripts/: ORGANIZATION.md  README.md  build-all-platforms.mjs  build-examples.mjs  build-gem.sh  build-style-dictionary.mjs  build-themes.mjs  copy-adapters.mjs  e2e-serve.mjs  format-utils.mjs  generate-css.mjs  generate-python.mjs  generate-themes-sass.mjs  generate-tokens-json.mjs  migrate-ts-to-json.mjs  playground.sh  prepare-examples.mjs  sync-catppuccin.mjs  (+5 more)
(+521 files in other folders)
