[project]
name = "turbo-themes"
version = "1.0.0"
description = "Universal design tokens and themes for Python applications"
authors = [{ name = "Turbo Coder" }]
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Typing :: Typed",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
